src/objects/Supplemental_Routing__c.object
<CustomObject>
    <description>Supplemental routing instructions to be used in conjunction with Special Instructions.</description>
    <fields>
        <fullName>Active_Ind__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Space for comments to be added to the Special Instructions record by maintenance user. Field visible only to maintenance user and system admin.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operator_Txt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operator Txt</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Platform Desc</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Category_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Category Description</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Nm__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Routing_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Routing ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_CD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Priority CD</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Txt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Txt</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Option_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Option Desc</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Partner_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Partner ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Partner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Rule_Category_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Rule Category Desc</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Rule_Category_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Rule Category ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Rule_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Rule Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Routing_Rule_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Rule ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Rule_Stmt_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Rule Stmt Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Routing_Rule_Stmt_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Rule Stmt ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Day__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SLA Day</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplementalRoutingExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SupplementalRoutingExternalID</label>
        <length>254</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Val_Txt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Val Txt</label>
        <type>TextArea</type>
    </fields>
    <label>Supplemental Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SupplementalRoutingExternalID__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Active_Ind__c</columns>
        <columns>Platform_Desc__c</columns>
        <columns>Policy_Number__c</columns>
        <columns>Policy_Nm__c</columns>
        <columns>Routing_Partner_ID__c</columns>
        <columns>Policy_Category_Desc__c</columns>
        <columns>Routing_Option_Desc__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Supplemental Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplemental Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>